# Secure-software-development

./: Dockerfile  Dockerfile.bak  README.md  app.db  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
EVIDENCE/P09/: README.md
EVIDENCE/P10/: README.md  sast_summary.md  semgrep.sarif
EVIDENCE/P11/: README.md
EVIDENCE/P12/: README.md
app/: db.py  errors.py  ewtb.puml  main.py  models.py  schemas.py  upload.py
deploy/security/apparmor/: secdev-course-app
deploy/security/seccomp/: uvicorn-fastapi.json
docs/: ci.md  homework-report.md
docs/adr/: ADR-001-secrets-management.md  ADR-002-input-validation.md  ADR-003-problem-details.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_errors.py  test_health.py  test_items.py  test_upload.py
