[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secdev-course-app"
version = "0.1.0"
description = "Secure backlog FastAPI service for the SecDev course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.29,<0.32",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=4.1,<5",
  "ruff>=0.6.0",
  "black>=24.8,<25",
  "isort>=5.13,<6",
  "httpx>=0.27,<0.28",
  "pre-commit>=3.8,<4",
  "build>=1.2,<2",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.ruff.lint]
select = ["E","F","W","I"]

[tool.isort]
profile = "black"
line_length = 100
